third_party/move/move-compiler-v2/tests/checking/typing/bug_13594.exp

Diagnostics:
error: missing fields `dummy_field`
  ┌─ tests/checking/typing/bug_13594.move:8:13
  │
8 │         let R {  } = move_from<R>(addr);
  │             ^^^^^^

error: missing fields `dummy_field`
   ┌─ tests/checking/typing/bug_13594.move:12:17
   │
12 │         let r = R {};
   │                 ^^^^

error: missing fields `dummy_field_1`
   ┌─ tests/checking/typing/bug_13594.move:33:13
   │
33 │         let G {  } = move_from<G>(addr);
   │             ^^^^^^

error: missing fields `dummy_field_1`
   ┌─ tests/checking/typing/bug_13594.move:37:17
   │
37 │         let r = G {};
   │                 ^^^^
